<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="HardcodedText" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="2dp"
        android:text="@string/app_welcome"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/dark_orange"
        android:textSize="20sp"
        android:textStyle="italic"
        android:typeface="serif" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnGoSignIn"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_gray"
            android:text="Sign In"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnGoSignUp"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_green"
            android:text="Sign Up" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/app_desc"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/gray"
        android:textSize="12sp" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/red"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/app_details"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/orange_"
        android:textSize="12sp" />

</RelativeLayout>