<?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scrollView1"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     tools:ignore="UselessParent" >

    <LinearLayout
     	android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:orientation="vertical" >
    
<TableLayout 
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="HardcodedText" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="about sharefaith"
            android:textColor="@color/blue"
            android:textSize="25sp" />

    </TableRow>
    
       <TableRow
           android:id="@+id/tableRow3"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/honor"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/dark_orange" />

    </TableRow>
    
     <TableRow
         android:id="@+id/table"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
         android:gravity="center" >

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Version"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/blue"
            android:textSize="25sp" />

    </TableRow>

     <TableRow
         android:id="@+id/table1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center" >

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/version"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/orange_" />

    </TableRow>
    
     <TableRow
         android:id="@+id/tableRow7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
         android:gravity="center" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Credits"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/blue"
            android:textSize="25sp" />

    </TableRow>
       
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/credits"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/green" />

    </TableRow>
    
      <TableRow
          android:id="@+id/tableRow8"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="6dp"
          android:gravity="center" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Attributions"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/blue"
            android:textSize="25sp" />

    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/attributions"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/gray" />

    </TableRow>
    
      <TableRow
          android:id="@+id/tableRow9"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="6dp"
          android:gravity="center" >

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Resources"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/blue"
            android:textSize="25sp" />

    </TableRow>
    
    <TableRow
        android:id="@+id/tableR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/textV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/resources"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/gray" />

    </TableRow>

     <TableRow
        android:id="@+id/table2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:text="Developer"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/blue"
            android:textSize="25sp" />

    </TableRow>
     <TableRow
        android:id="@+id/table3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/developer"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/green" />

    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:gravity="center" >

        <Button
            android:id="@+id/btnAboutOk"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_orange"
            android:gravity="center"
            android:text="okay"
            android:textColor="@color/white"
            android:textSize="28sp" />

    </TableRow>

</TableLayout>
</LinearLayout></ScrollView>