<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:ignore="HardcodedText,UselessParent" >

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtBlankError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:drawableLeft="@drawable/indicator_input_error"
                android:drawablePadding="5dp"
                android:text="some fields blank"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:visibility="invisible" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@color/white" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TableRow
                        android:id="@+id/tableRow7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center_horizontal" >

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/about"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/red" />

                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1" >

                        <EditText
                            android:id="@+id/editAbout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="5"
                            android:gravity="left"
                            android:hint="max 100 words"
                            android:inputType="textMultiLine"
                            android:minLines="3" />

                        <requestFocus />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="15dp"
                        android:gravity="center_horizontal" >

                        <TextView
                            android:id="@+id/txtTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/why"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/red" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1" >

                        <EditText
                            android:id="@+id/editWhy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="5"
                            android:gravity="left"
                            android:hint="max 200 words"
                            android:inputType="textMultiLine"
                            android:minLines="10" >
                        </EditText>
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="20dp"
                        android:gravity="center_horizontal" >

                        <TextView
                            android:id="@+id/txtquiz2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/desire"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@color/red" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1" >

                        <EditText
                            android:id="@+id/editDesire"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="5"
                            android:gravity="left"
                            android:hint="max 200 words"
                            android:inputType="textMultiLine"
                            android:minLines="10" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center_horizontal" >

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal" >

                            <Button
                                android:id="@+id/btnSave"
                                style="@style/ButtonText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:background="@drawable/button_orange"
                                android:text="finish"
                                android:textColor="@color/white"
                                android:textSize="24sp" />

                            <ProgressBar
                                android:id="@+id/progressSave"
                                style="?android:attr/progressBarStyleLarge"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:indeterminateDrawable="@drawable/custom_progress_background"
                                android:visibility="invisible" />
                        </RelativeLayout>
                    </TableRow>
                </LinearLayout>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>